# ai-experiments

comfyui-experiment/: .gitignore  README.md  main.py  pyproject.toml  video_wan2_2_14B_i2v.json.jinja  video_wan2_2_14B_t2v.json.jinja
comfyui-experiment/tests/: comfyui_client.py  judge.py  test_flux_t2i_workflow.py  test_free_mem.py  test_qwen_t2i_workflow.py  test_sd_t2i_workflow.py  test_sdxl_t2i_upscale_workflow.py  test_wan_i2v_workflow.py  test_wan_t2v_workflow.py  tools.py
diffusers-experiment/: .gitignore  README.md  pyproject.toml  test_flux_text_to_image.py  test_realvisxl_v40.py  test_sdxl_hiresfix.py  test_text_to_image.py
langchain-experiment/: README.md  pyproject.toml
langchain-experiment/tests/: expert.py  test_agent_sql.py  test_content_assessment.py  test_expert.py  test_hello_world.py  test_playwright.py  test_structured_output.py  test_tools.py
llama-index-experiment/: README.md  main.py  pyproject.toml  test_agent.py  test_agent_with_query_engine.py  test_query_engine.py  test_summarize.py
llama-index-experiment/docs/: data_science.md  food_culture.md  java_programming.md  machine_learning.md  mountain_biking.md  new_jersey.md  pink_floyd.md  python_basics.md
openai-experiment/: .editorconfig  README.md  pyproject.toml
openai-experiment/openai_experiment/: __init__.py
openai-experiment/tests/: fixtures.py  test_assistant.py  test_calculator.py  test_extract_event_details.py  test_functions.py  test_named_entity_recognition.py  test_sentiment_analysis.py
pydanticai-experiment/: .editorconfig  .gitignore  README.md  open-webui.sh  pyproject.toml
pydanticai-experiment/pydanticai_experiment/: main.py
pydanticai-experiment/tests/: test_hello_world.py  test_tool_call.py
rag-experiment/: .gitignore  README.md  pyproject.toml
rag-experiment/docs/: java.md  python.md  rebel500.md
rag-experiment/rag_experiment/: chunker.py  context_based_answering_agent.py  ingestion.py  mess.py  query_context_provider.py  root_agent.py  text_relevance_checker.py
rag-experiment/tests/: test_context_based_answering_agent.py  test_hello.py  test_root_agent.py  test_text_relevance_checker.py
shape-recognition-experiment/: Pipfile  README.md  shape-recognition-experiment.ipynb
vlm-experiment/: .editorconfig  README.md  pyproject.toml  semantics.py  test_vlm.py
