[project]
name = "diffusers-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==0.34.2",
    "diffusers==0.31.0",
    "protobuf<5",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "safetensors==0.4.5",
    "sentencepiece>=0.2.1",
    "transformers==4.45.2",
]

[tool.pytest.ini_options]
addopts = "-s -v"
