[project]
name = "langchain-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "langchain>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "pytest>=8.4.2",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]
