[project]
name = "langchain-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "beautifulsoup4>=4.13.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.7",
    "lxml>=6.0.1",
    "ollama>=0.5.3",
    "playwright>=1.55.0",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-md-report>=0.7.0",
]
