[project]
name = "pydanticai-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "ollama>=0.5.4",
    "pydantic-ai>=1.0.10",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
addopts = "-s"
asyncio_mode = "auto"
